2006-02-25  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: set default value zero in C of private method
	    OCI::Metadata::Base#__get_*. add a private method 
	    OCI::Metadata::Base#__charset_name.
	* lib/DBD/OCI8/OCI8.rb: fix to work with ruby-oci8 0.1 also.
	* lib/oci8/metadata.rb: refactor and add comments for rdoc.

2006-02-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: require oci8/compat.rb also.
	* lib/oci8/compat.rb: add a new file. Old version's features
	    are moved from lib/oci8/oci8.rb.
	* lib/oci8/metadata.rb: data_type's return value become symbol
	    instead of number.
	* lib/oci8/oci8.rb: Old version's features are moved to
	     lib/oci8/compat.rb.

2006-02-09  KUBO Takehiro  <kubo@jiubao.org>
	add OCI8::Metadata module.
	* ext/oci8/error.c: add oci8_get_error_code().
	* ext/oci8/extconf.rb: delete param.o and add metadata.o.
	* ext/oci8/metadata.c: add a new file.
	* ext/oci8/oci8.h: add oci8_get_error_code(), Init_oci8_metadata(),
	    oci8_metadata_create() and ora_number_to_str().
	    delete  and oci8_param_create().
	* ext/oci8/oci8lib.c: call Init_oci8_metadata() instead of
	     Init_oci8_param().
	* ext/oci8/oranumber.c: export ora_number_to_str().
	* ext/oci8/param.c: deleted.
	* ext/oci8/stmt.c: call oci8_metadata_create instead of 
	     oci8_param_create().
	* lib/oci8.rb.in: require 'oci8/metadata.rb'
	* lib/oci8/metadata.rb: add a new file.

2006-02-08  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb: move almost code to lib/oci8/oci8.rb.
	* lib/oci8/oci8.rb: moved from lib/oci8.rb.

2006-02-04  KUBO Takehiro  <kubo@jiubao.org>
	merge OCIStmt to OCi8::Curosr.
	* ext/oci8/oci8.c: implement OCI8::autocommit? and OCI8::autocommit=
	    in C layer.
	* ext/oci8/oci8.h: fix oci8_svcctx_t structure to support
	    OCI8::autocommit in C layer. fix Init_oci8_stmt() prototype.
	* ext/oci8/oci8lib.c: fix Init_oci8_stmt().
	* ext/oci8/stmt.c: OCIStmt become OCI8::Cursor. Almost OCIStmt's